--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "private": true,
   "author": "Stanley Owen <stanleyowen06@gmail.com>",
   "dependencies": {
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.1.1",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.35",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "clean-css-cli": "^5.4.2",
-    "firebase": "^9.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "^4.0.3",
-    "sass": "^1.43.4",
-    "web-vitals": "^2.1.2"
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/lab": "^5.0.0-alpha.80",
+    "@mui/material": "^5.6.4",
+    "@types/node": "^17.0.31",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "clean-css-cli": "^5.6.0",
+    "firebase": "^9.7.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.51.0",
+    "web-vitals": "^2.1.4"
   },
   "homepage": "./",
   "scripts": {
@@ -54,14 +55,14 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.1.1",
     "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
-    "eslint": "^8.2.0",
-    "eslint-plugin-react": "^7.27.0",
-    "prettier": "2.4.1",
-    "typescript": "^4.4.4"
+    "dotenv": "^16.0.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-react": "^7.29.4",
+    "prettier": "2.6.2",
+    "typescript": "^4.6.4"
   }
 }
