--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
+    "axios": "^0.27.2",
     "clean-css-cli": "^5.6.0",
     "firebase": "^9.8.2",
     "react": "^18.1.0",
