--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Loofi's Automatic Updater API",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,8 +25,10 @@
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "download": "^8.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^6.1.5"
+    "helmet": "^6.1.5",
+    "octokit": "^2.0.14"
   }
 }
