--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   },
   "homepage": "https://github.com/stanleyowen/loofi-updater#readme",
   "dependencies": {
-    "axios": "^1.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "download": "^8.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.1.5",
-    "octokit": "^2.0.14"
+    "octokit": "^2.0.14",
+    "semver": "^7.5.0"
   }
 }
