--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/stanleyowen/loofi-updater#readme",
   "dependencies": {
+    "axios": "^1.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "download": "^8.0.0",
