Update environment config and default server port

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
+# GitHub Personal Access Token - Required for authenticating with GitHub API
+# Used to fetch release information from loofi repository
 GH_TOKEN = ***************************
+
+# CORS Origin Configuration - Controls which domains can access the API
+# Set to "*" to allow all origins, or specify comma-separated domains for restricted access
+# Example: "https://app.example.com,https://admin.example.com"
+CORS_ORIGIN = *
+
+# Discord Webhook URL - Used for logging and monitoring API requests
+# The server sends notifications about incoming requests to this webhook endpoint
+# Replace with your actual Discord webhook URL or other monitoring service endpoint
+WEBHOOK_URL = https://example.com/webhook
